--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: all 0.3s ease-in-out
 }
 @font-face {
   font-family: YB_M;
@@ -13,7 +14,7 @@
   src: url('Assest/Fonts/YB_regular.ttf');
 }
 body {
-  font-family: Vazir, sans-serif;
+  font-family: YB_R, sans-serif;
   direction: rtl;
   background: #121212;
   color: #e0e0e0;
@@ -36,38 +37,60 @@ h1, h2 {
     margin-bottom: 16px;
     letter-spacing: 0px;
 }
-
-/* Navigation */
+hr{
+      width: 100%;
+    border: none;
+    height: 1px;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  background: linear-gradient(to left, #00000000,#666666,#00000000);
+}
 nav {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-  margin-bottom: 20px;
-      justify-content: center;
+display: flex;
+    gap: 12px;
+    justify-content: center;
+    flex-wrap: wrap;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 9999;
+    padding: 9px 9px;
+    background: #0000001a;
+    backdrop-filter: blur(20px);
+    border-radius: 22px;
+    border: 1px solid #333;
+  transition: all 0.3s ease-in-out;
 }
 
 nav button {
-background: #1f1f1f;
-    color: #e0e0e0;
-    margin-right: -8px;
-    border: 1px solid #333;
-    padding: 8px 14px;
-    border-radius: 0;
-    cursor: pointer;
-    transition: background 0.2s;
-    font-family: "YB_M";
-}
-nav #first{
-  border-radius: 0 20px 20px 0;
-  padding-right: 20px;
-}
-nav #last{
-  border-radius: 20px 0 0 20px;
-  padding-left: 20px;
+  all: unset;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 70px;
+  height: 70px;
+  background: rgba(0, 0, 0, 0.2);
+  color: #e0e0e0;
+  border-radius: 18px;
+  cursor: pointer;
+  font-family: "YB_M";
+  transition: background 0.3s ease;
 }
 
 nav button:hover {
   background: #2c2c2c;
+}
+
+nav button iconify-icon {
+  margin-bottom: 4px;
+  color: #e0e0e0;
+}
+
+nav button span {
+  font-size: 12px;
+  text-align: center;
 }
 
 /* Inputs & Buttons */
@@ -131,15 +154,16 @@ li {
 
 /* Buttons in List Items */
 .remove-btn {
-  background: #d32f2f;
-  color: #fff;
+  background: none;
+  color: rgb(207, 59, 59);
   padding: 4px 8px;
   border: none;
   border-radius: 4px;
 }
 
 .remove-btn:hover {
-  background: #c62828;
+  color: #b60808;
+  background: none;
 }
 
 .edit-btn {
@@ -175,13 +199,13 @@ table {
 
 th, td {
   padding: 10px;
-  border: 1px solid #333;
   text-align: center;
+  border-left: 1px solid rgb(48, 48, 48);
 }
 
 th {
   background: #212121;
-  color: #90caf9;
+  color: #7a88ee;
 }
 
 td {
@@ -194,14 +218,58 @@ td {
   font-weight: bold;
   color: #81c784;
 }
+#factor_CTA{
+  width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem;
+}
+#factor_CTA button{
+  background-color: rgb(43, 43, 43);
+}
+#factor_CTA button:hover{
+  background-color: #373737;
+}
+#factor_CTA  button:first-of-type{
+    border-radius: 0 12px 12px 0;
+    border-left: 2px solid #1a1a1a;
+}
+#factor_CTA  button:last-of-type{
+  border-radius: 12px 0 0 12px;
+}
+#factor_addProduct{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 6.5rem;
+}
+#factor_Input{
+      width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 
 /* Responsive */
 @media (max-width: 768px) {
   nav {
-    flex-direction: column;
+    flex-direction: row;
+    gap: 8px;
+    flex-wrap: wrap;
+    padding: 10px;
+    width: 19rem;
   }
-  nav button{
-    border-radius: 11px !important;
+  nav button {
+    width: 50px;
+    height: 50px;
+  }
+    nav button span {
+    font-size: 8.4px;
+  }
+  nav button iconify-icon {
+        scale: 87%;
+        margin-bottom: 0;
   }
 
   table, thead, tbody, th, td, tr {
@@ -220,7 +288,6 @@ td {
     text-align: right;
     padding: 10px;
     position: relative;
-    padding-right: 50%;
   }
 
   td::before {
@@ -231,6 +298,9 @@ td {
     font-weight: bold;
     color: #90caf9;
   }
+  #factor_Input{
+    flex-direction: column;
+}
 }
 
 .card {
